src/tests/testfiles/function-declarations/4.txt
testfiles/function-declarations/4.c:6:1: error: Conflicting types for function declaration f
float f(int a, int b);
^
